{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 888,
  "lineage": "28c269b1-47ed-9c54-3f50-fe7a11d485fe",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfc97bf81f2eadc4",
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:instance/i-04a55997e783bdb33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a55997e783bdb33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e159e2708a6fed7",
            "private_dns": "ip-10-180-10-132.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.180.10.132",
            "public_dns": "ec2-52-192-103-172.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.192.103.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:386147755255:key/ba3e291c-1255-43a5-bf90-bd2c316eb51c",
                "tags": {
                  "Name": "test-ec2-root"
                },
                "throughput": 125,
                "volume_id": "vol-066906d178d9dffb3",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e5f5b1a2f826440",
            "tags": {
              "Name": "test-ec2"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "test-ec2",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bea0ee0e0f7a0933"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa900264f422c752",
            "domain": "vpc",
            "id": "eipalloc-0fa900264f422c752",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-175-140.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.175.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dataplatform-kr-prod-workload-ngw-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-ngw-eip",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:internet-gateway/igw-0830a7aec6eef9177",
            "id": "igw-0830a7aec6eef9177",
            "owner_id": "386147755255",
            "tags": {
              "Name": "dataplatform-kr-prod-workload-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-igw",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa900264f422c752",
            "association_id": "eipassoc-05f712713a13cd3f3",
            "connectivity_type": "public",
            "id": "nat-03ac87a9b06e3dd65",
            "network_interface_id": "eni-00a6cbcbe22875ce9",
            "private_ip": "10.180.10.220",
            "public_ip": "35.73.175.140",
            "subnet_id": "subnet-08e5f5b1a2f826440",
            "tags": {
              "Name": "dataplatform-kr-prod-workload-ngw"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-ngw",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:network-acl/acl-0c60e55dd438114ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c60e55dd438114ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "386147755255",
            "subnet_ids": [
              "subnet-00bb61e251b13a019",
              "subnet-06df3fdeec6652b68",
              "subnet-08e5f5b1a2f826440",
              "subnet-0e59f58382915bd10",
              "subnet-0e737bbf7ccc436ae",
              "subnet-0f0ed9830defe497f"
            ],
            "tags": {
              "Name": "dataplatform-kr-prod-workload-nacl"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-nacl",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:route-table/rtb-086761d4b599c7e23",
            "id": "rtb-086761d4b599c7e23",
            "owner_id": "386147755255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ac87a9b06e3dd65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dataplatform-kr-prod-workload-private-rtb"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-private-rtb",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:route-table/rtb-06c7dbd235cac9821",
            "id": "rtb-06c7dbd235cac9821",
            "owner_id": "386147755255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0830a7aec6eef9177",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dataplatform-kr-prod-workload-public-rtb"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-public-rtb",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0676330eb054c6b0b",
            "route_table_id": "rtb-086761d4b599c7e23",
            "subnet_id": "subnet-06df3fdeec6652b68"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d948a43cc21e13f",
            "route_table_id": "rtb-086761d4b599c7e23",
            "subnet_id": "subnet-0f0ed9830defe497f"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028fb6a54c0ade6c2",
            "route_table_id": "rtb-086761d4b599c7e23",
            "subnet_id": "subnet-0e59f58382915bd10"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7dc3444690d9ed",
            "route_table_id": "rtb-06c7dbd235cac9821",
            "subnet_id": "subnet-08e5f5b1a2f826440"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79fe606bd2cb26c",
            "route_table_id": "rtb-06c7dbd235cac9821",
            "subnet_id": "subnet-0e737bbf7ccc436ae"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d38c0a255fa9f3cd",
            "route_table_id": "rtb-06c7dbd235cac9821",
            "subnet_id": "subnet-00bb61e251b13a019"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dataplatform-kr-prod-rds-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:security-group/sg-02bd3650f91298c0a",
            "description": "security group for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bd3650f91298c0a",
            "ingress": [],
            "name": "dataplatform-kr-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "386147755255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dataplatform-kr-prod-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-rds-sg",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "test-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:security-group/sg-0bea0ee0e0f7a0933",
            "description": "this is a test sg and will be deleted shortly",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bea0ee0e0f7a0933",
            "ingress": [],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "386147755255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "test-sg",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "test-sg2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:security-group/sg-02ab3a03c4bf61386",
            "description": "this is a test sg2 and will be deleted shortly",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ab3a03c4bf61386",
            "ingress": [],
            "name": "test-sg2",
            "name_prefix": "",
            "owner_id": "386147755255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg2"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "test-sg2",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dataplatform-kr-prod-rds-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "121.134.221.250/32"
            ],
            "description": "Allow inbound traffic from seoul office public IP on specfieid port",
            "from_port": 3306,
            "id": "sgrule-1897036147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02bd3650f91298c0a",
            "security_group_rule_id": "sgr-0fdb9028e0ca7309a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "test-sg1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "121.134.221.250/32"
            ],
            "description": "Allow SSH from specified ip",
            "from_port": 22,
            "id": "sgrule-1464372867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bea0ee0e0f7a0933",
            "security_group_rule_id": "sgr-0570522a2fbb7a09f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "test-sg2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all inbound traffic on specified port",
            "from_port": 80,
            "id": "sgrule-950288696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bea0ee0e0f7a0933",
            "security_group_rule_id": "sgr-0e5ba6601a00b42b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-06df3fdeec6652b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.180.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06df3fdeec6652b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "private",
              "Name": "dataplatform-kr-prod-private-sn-a"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "private",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-private-sn-a",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-0f0ed9830defe497f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.180.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ed9830defe497f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "private",
              "Name": "dataplatform-kr-prod-private-sn-c"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "private",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-private-sn-c",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-0e59f58382915bd10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.180.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e59f58382915bd10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "private",
              "Name": "dataplatform-kr-prod-private-sn-d"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "private",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-private-sn-d",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-08e5f5b1a2f826440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.180.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e5f5b1a2f826440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "public",
              "Name": "dataplatform-kr-prod-public-sn-a"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "public",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-public-sn-a",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-0e737bbf7ccc436ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.180.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e737bbf7ccc436ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "public",
              "Name": "dataplatform-kr-prod-public-sn-c"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "public",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-public-sn-c",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:subnet/subnet-00bb61e251b13a019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.180.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bb61e251b13a019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Identifier": "public",
              "Name": "dataplatform-kr-prod-public-sn-d"
            },
            "tags_all": {
              "Environment": "prod",
              "Identifier": "public",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-public-sn-d",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0310d2b34d3883149"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:386147755255:vpc/vpc-0310d2b34d3883149",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/16",
            "default_network_acl_id": "acl-09ee453f43fc0fdf6",
            "default_route_table_id": "rtb-007d1650787807033",
            "default_security_group_id": "sg-0ac315e5df2729914",
            "dhcp_options_id": "dopt-0a5897b4d4ee493a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0310d2b34d3883149",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007d1650787807033",
            "owner_id": "386147755255",
            "tags": {
              "Name": "dataplatform-kr-prod-workload-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Maintainer": "devops",
              "Name": "dataplatform-kr-prod-workload-vpc",
              "Repository": "terraform-from-scratch",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}